--- a/Esercizio_4/index.html
+++ b/Esercizio_4/index.html
@@ -1,22 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Orologio (p5js)</title>
-	<style>
-		body {
-			background-color: lightgray;
-			margin: 0;
-			padding: 20px;
-		}
-		canvas {
-			display: block;
-		}
-	</style>
-</head>
-<body>
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.min.js"></script>
-	<script src="sketch.js"></script>
-</body>
+  <head>
+    <title>Orologio al contrario</title>
+    <style>
+      body {
+        background-color: black;
+        color: white;
+        font-family: Futura, Arial, sans-serif;
+        font-size: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="countdown"></div>
+
+    <script>
+      // Imposta la data di fine dell'orologio
+      var endDate = new Date("June 20, 2023 16:00:00").getTime();
+
+      // Funzione per aggiornare l'orologio
+      function updateClock() {
+        // Ottieni la data e l'ora correnti
+        var now = new Date().getTime();
+
+        // Calcola la differenza tra la data di fine e la data corrente
+        var timeRemaining = endDate - now;
+
+        // Calcola i giorni, le ore, i minuti e i secondi rimanenti
+        var days = Math.floor(timeRemaining / (1000 * 60 * 60 * 24));
+        var hours = Math.floor(
+          (timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        var minutes = Math.floor(
+          (timeRemaining % (1000 * 60 * 60)) / (1000 * 60)
+        );
+        var seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+
+        // Formatta l'output aggiungendo uno zero iniziale se necessario
+        var daysFormatted = ("0" + days).slice(-2);
+        var hoursFormatted = ("0" + hours).slice(-2);
+        var minutesFormatted = ("0" + minutes).slice(-2);
+        var secondsFormatted = ("0" + seconds).slice(-2);
+
+        // Visualizza l'orologio
+        document.getElementById("countdown").innerHTML =
+		  " | " +
+          daysFormatted +
+          " | " +
+          hoursFormatted +
+          " | " +
+          minutesFormatted +
+          " | " +
+          secondsFormatted +
+		  " | " ;
+
+        // Controlla se l'orologio è terminato
+        if (timeRemaining <= 0) {
+          clearInterval(clockInterval);
+          document.getElementById("countdown").innerHTML = "Tempo scaduto!";
+        }
+      }
+
+      // Aggiorna l'orologio ogni secondo
+      var clockInterval = setInterval(updateClock, 1000);
+    </script>
+  </body>
 </html>
