--- a/Esercizio_2A/index.html
+++ b/Esercizio_2A/index.html
@@ -23,7 +23,7 @@
 	</style>
 </head>
 <body>
-	<img src="img/immagine_1.png">
+	<img src="img/Immagine_1.png">
 	<img src="img/immagine_2.png">
 	<img src="img/immagine_3.png">
 </body>
